--- a/src/modules/more/more.css
+++ b/src/modules/more/more.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--spacing-lg);
-  padding: var(--spacing-lg);
+  padding: var(--spacing-xl) var(--spacing-lg) var(--spacing-lg);
 }
 
 .more-page__subtitle {
